Added dark mode support

--- a/index.html
+++ b/index.html
@@ -2,8 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/DailyRitualIcon_survival.webp" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="/DailyRitualIcon_survival.webp"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script>
+      if (
+        localStorage.theme === "dark" ||
+        (!("theme" in localStorage) &&
+          window.matchMedia("(prefers-color-scheme: dark)").matches)
+      ) {
+        document.documentElement.classList.add("dark");
+      } else {
+        document.documentElement.classList.remove("dark");
+      }
+    </script>
     <title>DBD Icon Game</title>
   </head>
   <body>
