--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       href="/DailyRitualIcon_survival.webp"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="darkreader-lock" />
     <script>
       if (
         localStorage.theme === "dark" ||
